--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 click==8.1.7
 httpx==0.28.1
-langfun @ git+https://github.com/google/langfun.git@3491be8
+langfun[mime-auto] @ git+https://github.com/google/langfun.git@3491be8
